--- a/css/agileMantis.css
+++ b/css/agileMantis.css
@@ -107,7 +107,7 @@ html, body {
 	margin-bottom: 		5px;
 	text-align: 		center;
 	padding: 			10px;
-	width: 				365px;
+	width: 				371px;
 }
 
 .headline_days {
@@ -119,7 +119,7 @@ html, body {
 	font-size: 			14px;
 	text-align: 		center;
 	padding: 			10px;
-	width: 				35px;
+	width: 				53px;
 }
 
 .after_month,
@@ -130,10 +130,10 @@ html, body {
 	color: 				#000;
 	font-family: 		Arial;
 	font-size: 			14px;
-	padding: 			10px;
-	height: 			30px;
+	padding: 			4px 2px 25px 8px;
+	height: 			70px;
 	text-align: 		center;
-	width: 				35px;
+	width: 				52px;
 }
 
 .current_day {
@@ -149,8 +149,8 @@ html, body {
 .dateField {
 	font-family: 		Arial;
 	font-size: 			10px;
-	height: 			20px;
-	width: 				35px;
+	height: 			25px;
+	width: 				37px;
 	background-color: 	#FFF;
 	margin-top: 		2px;
 	text-align: 		center;
